adicionado a entrada de imagens e pdf

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/multipart": "^9.0.3",
     "@fastify/postgres": "^6.0.2",
     "fastify": "^5.4.0",
     "pg": "^8.16.3"
